<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/settings"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.psilos.automationsystem.SettingsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Setting_Frequency_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Setting_Frequency_TextView"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/Setting_Threshold_Proximity_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Setting_Proximity_Threshold_TextView"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/Setting_Threshold_Acceleration_X_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Settings_Threshold_Acceleration_X_Text_View"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/Setting_Threshold_Acceleration_Z_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Settings_Threshold_Acceleration_Z_Text_View"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/Setting_Threshold_Acceleration_Y_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Settings_Threshold_Acceleration_Y_Text_View"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/Setting_Frequency_TextView"
                android:layout_below="@+id/Setting_Port_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:labelFor="@id/Setting_Frequency_Value"
                android:text="@string/frequency" />

            <TextView
                android:id="@+id/Setting_Threshold_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Setting_Frequency_Value"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/Setting_Threshold_Proximity_Value"
                android:text="@string/threshold" />

            <TextView
                android:id="@+id/Setting_Proximity_Threshold_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/Setting_Threshold_TextView"
                android:text="@string/proximity" />

            <TextView
                android:id="@+id/Settings_Threshold_Acceleration_X_Text_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Setting_Threshold_Proximity_Value"
                android:layout_marginTop="16dp"
                android:labelFor="@id/Setting_Threshold_Acceleration_X_Value"
                android:text="@string/acceleration_x_text_view" />

            <TextView
                android:id="@+id/Settings_Threshold_Acceleration_Y_Text_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/Setting_Threshold_Acceleration_X_Value"
                android:layout_marginTop="16dp"
                android:labelFor="@id/Setting_Threshold_Acceleration_Y_Value"
                android:text="@string/acceleration_y_text_view" />


            <TextView
                android:id="@+id/Settings_Threshold_Acceleration_Z_Text_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/Setting_Threshold_Acceleration_Y_Value"
                android:layout_marginTop="16dp"
                android:labelFor="@id/Setting_Threshold_Acceleration_Z_Value"
                android:text="@string/acceleration_z_text_view" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/Settings_Threshold_Proximity_Switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/Setting_Threshold_TextView"
                android:switchTextAppearance="@style/TextAppearance.AppCompat"
                android:textOff="@string/min"
                android:textOn="@string/max"
                app:showText="true" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/Settings_Threshold_Accelerator_X_Swicher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/Settings_Threshold_Acceleration_X_Text_View"
                android:textOff="@string/min"
                android:textOn="@string/max"
                app:showText="true" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/Settings_Threshold_Accelerator_Y_Swicher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/Settings_Threshold_Acceleration_Y_Text_View"
                android:textOff="@string/min"
                android:textOn="@string/max"
                app:showText="true" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/Settings_Threshold_Accelerator_Z_Swicher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/Settings_Threshold_Acceleration_Z_Text_View"
                android:textOff="@string/min"
                android:textOn="@string/max"
                app:showText="true" />

            <Button
                android:id="@+id/saveChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Setting_Threshold_Acceleration_Z_Value"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/resetChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saveChanges"
                android:layout_centerHorizontal="true"
                android:text="@string/reset"
                android:textColor="@color/colorAccent" />


            <TextView
                android:id="@+id/Settings_Mode_TextView"
                android:text="@string/mode_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/Settings_Ip_TextView"
                android:text="@string/Ip_TextView"
                android:layout_below="@+id/Settings_Net_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/Setting_Ip_Value"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/Setting_Ip_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Settings_Ip_TextView"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/Settings_Port_TextView"
                android:text="@string/port_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Setting_Ip_Value"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/Setting_Port_Value"/>

            <EditText
                android:id="@+id/Setting_Port_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Settings_Port_TextView"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/Settings_Net_TextView"
                android:text="@string/Settings_internet"
                android:layout_below="@id/Settings_Mode_TextView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/Settings_Mode_Switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Settings_Mode_TextView"
                android:layout_marginTop="16dp"
                android:layout_alignParentEnd="true"
                android:textOff="@string/automatic"
                android:textOn="@string/manual"
                app:showText="true"
                android:checked="true" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
